93-external-services/.ipynb_checkpoints/ingress-service-checkpoint.yaml
apiVersion: networking.k8s.io/v1beta1
# UPDATE THE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # tells kubernetes to create an ingress controller based on nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # allows for use of regex
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: api-deployment-service
              servicePort: 5000
